feat: index atualizado

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta
+      name="description"
+      content="Empório da Carne & Hortifruti Sul Brasil oferece carnes de qualidade, frutas e legumes frescos diretamente dos produtores da cooperativa de Marília e região."
+    />
+
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/logo_sul_brasil.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Emporio da Carne & Hortifruti Sul Brasil</title>
   </head>
   <body>
     <div id="root"></div>
